# eventweaver-tool

./: README.md
eventweaver-tool/: README.md  pyproject.toml
eventweaver-tool/docs/: ARCHITECTURE.md
eventweaver-tool/examples/configs/: synthetic.toml
eventweaver-tool/examples/logs/: service_a.jsonl  service_c.csv
eventweaver-tool/src/eventweaver/: __init__.py  analysis.py  cli.py  config.py  dsl.py  enrichers.py  models.py  sources.py  timeline.py
eventweaver-tool/tests/: test_analysis.py  test_config.py  test_dsl.py  test_timeline.py
